Cleaning up existing code

--- a/T1_measurement_example.ipynb
+++ b/T1_measurement_example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Measure qubit $T_1$ with mid-circuit measurement functionality in QI 2.0"
+    "# $T_1$ under repeated measurement using QI 2.0"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the function NewDay() will create a folder in the path specified in the utility_functions.py where we will save all our results."
+    "Using the function new_day() will create a folder in the path specified in the utility_functions.py where we will save all our results."
    ]
   },
   {
@@ -51,7 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataPath = NewDay()"
+    "data_directory = f\"[...]\"\n",
+    "\n",
+    "new_directory_path = create_new_data_folder(datadir=data_directory)"
    ]
   },
   {
@@ -63,35 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qubit_nr = 0 # e.g. the entry \"0\" is for qubit \"Q0\"\n",
-    "total_time = 150e-6 # in units of [s]\n",
-    "nr_points = 31 # number of measurement points\n",
-    "nr_shots = 2**14 # number of shots per each measurement point"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "provider = QIProvider()\n",
+    "nr_qubits = 7 # Number of qubits of Starmon-7 processor\n",
+    "nr_points = 15 # Number of points for the T1 experiment\n",
+    "total_time = 150e-6 # Total time of the T1 experiment in [s]\n",
     "\n",
-    "backend = provider.get_backend(name=experiment_backend)\n",
+    "qubit_index = 0 # We choose qubit Q0\n",
+    "\n",
     "cycle_time = 20e-9 # cycle time of the Central Controller (CC) instrument\n",
-    "dt = total_time / nr_points\n",
+    "dt = total_time / nr_points # time interval between each measurement point\n",
     "measurement_times = np.linspace(start = 0.0, stop = total_time, num = nr_points)\n",
     "\n",
     "qc = QuantumCircuit(7, nr_points) # NOTE: we should put backend.num_qubits here\n",
-    "qc.x(qubit_nr) # qubit initialization to the |1> state\n",
-    "qc.measure(qubit = qubit_nr, cbit = 0) # initial measurement at time t=0\n",
+    "qc.x(qubit_index) # qubit initialization to the |1> state\n",
+    "qc.measure(qubit = qubit_index, cbit = 0) # initial measurement at time t=0\n",
     "for time_idx in range(1, nr_points):\n",
-    "    qc.delay(duration = int((dt / cycle_time)), qarg = qubit_nr) # delay in units of CC cycles\n",
-    "    qc.measure(qubit = qubit_nr, cbit = time_idx)"
+    "    qc.delay(duration = int((dt / cycle_time)), qarg = qubit_index) # delay in units of CC cycles\n",
+    "    qc.measure(qubit = qubit_index, cbit = time_idx)"
    ]
   },
   {
@@ -119,13 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "basename = 'Example'\n",
-    "suffix = 'T1_under_measurement_w10us'\n",
-    "histname, circuit_name, rawname = PrepFile(basename, suffix, doraw=1)"
+    "suffix = 'T1_under_measurement_w5us'\n",
+    "histname, circuit_name, rawname = prepare_file(basename, suffix, doraw=1)"
    ]
   },
   {
@@ -137,15 +130,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = API_RunAndSave(0, Qcircuit = qc, rawdata_filename = rawname,\n",
-    "                         circuit_name=circuit_name, histname = histname,\n",
-    "                         shots=nr_shots, backend_name=experiment_backend, get_results = True,\n",
-    "                         get_hist_data=True, measurement_list=np.ones(nr_points, int),\n",
-    "                         get_raw_data=True)"
+    "nr_shots = 2**14 # Careful not to exceed the max_shots of the backend!\n",
+    "\n",
+    "results = api_run_and_save(0, Qcircuit = qc, rawdata_filename = rawname, circuit_name=circuit_name,\n",
+    "                           histname = histname, shots=nr_shots, backend_name=experiment_backend, get_results = True,\n",
+    "                           get_hist_data=True, measurement_list=[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], get_raw_data=True)"
    ]
   },
   {
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
