Some more cleaning up

--- a/T1_measurement_example.ipynb
+++ b/T1_measurement_example.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first do the necessary imports and login in the Quantum Inspire website. "
+    "In this notebook we will perform a $T_1$ measurement using functions from utility_functions.py, which save the raw data in a .csv file in order to be processed after measurement.\n",
+    "\n",
+    "We use the mid-circuit measurement functionality for this purpose."
    ]
   },
   {
@@ -42,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the function new_day() will create a folder in the path specified in the utility_functions.py where we will save all our results."
+    "Using the function create_new_data_folder() will create a folder in the path specified in the utility_functions.py where we will save all our results."
    ]
   },
   {
@@ -60,12 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now create the circuit using Qiskit."
+    "We now create the quantum circuit to perform a single-qubit $T_1$ measurement using Qiskit,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to see the circuit run the cell below."
+    "You may visualize the circuit by running the cell below,"
    ]
   },
   {
@@ -107,17 +109,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choose the name of the files that we will create and save. "
+    "Choose the name of the files that we will create and save,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "basename = 'Example'\n",
-    "suffix = 'T1_under_measurement_w5us'\n",
+    "suffix = 'T1_under_measurement'\n",
     "histname, circuit_name, rawname = prepare_file(basename, suffix, doraw=1)"
    ]
   },
@@ -125,12 +127,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specify the number of shots and run the algorithm."
+    "Here we specify the number of shots and run the algorithm, (careful not to exceed the max_shots allowed by the backend!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
     "\n",
     "results = api_run_and_save(0, Qcircuit = qc, rawdata_filename = rawname, circuit_name=circuit_name,\n",
     "                           histname = histname, shots=nr_shots, backend_name=experiment_backend, get_results = True,\n",
-    "                           get_hist_data=True, measurement_list=[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], get_raw_data=True)"
+    "                           get_hist_data=True, measurement_list=list((np.ones(nr_points, dtype=np.int8))), get_raw_data=True)"
    ]
   },
   {
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
