Created getting_started notebook, cleaned up existing code

--- a/T1_measurement_example.ipynb
+++ b/T1_measurement_example.ipynb
@@ -4,16 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $T_1$ under repeated measurement using QI 2.0"
+    "**Authors:** G. Ruggero Di Carlo (rdicarlo@tudelft.nl), Marios Samiotis (m.samiotis@tudelft.nl)\n",
+    "\n",
+    "**Date:** February 14, 2025"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will perform a $T_1$ measurement using functions from utility_functions.py, which save the raw data in a .csv file in order to be processed after measurement.\n",
+    "# $T_1$ under repeated measurement using QI 2.0, with saving of raw data into .csv file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we will perform a $T_1$ measurement using custom functions from utility_functions.py, and save the raw data in a .csv file in order to be processed after measurement.\n",
     "\n",
-    "We use the mid-circuit measurement functionality for this purpose."
+    "We use the mid-circuit measurement functionality for this purpose.\n",
+    "\n",
+    "For optimal performance, make sure that you are running this notebook within a customized Python 3.12 environment which includes the packages \"quantuminspire\" and \"qiskit-quantuminspire\".\n",
+    "\n",
+    "For detailed instructions on how to create such a Python environment, follow the instructions in the README file, [https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/README.md](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/README.md).\n",
+    "\n",
+    "NOTE: in order to run the custom functions from utility_functions.py, you will need to clone the entire repository QuantumInspireUtilities from [https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/tree/main](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/tree/main).\n",
+    "\n",
+    "Useful links:\n",
+    "1. [Starmon-7 Fact Sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf)\n",
+    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)"
    ]
   },
   {
