--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By taking a look at the transpiled circuit of the previous example, we see that it uses a CNOT gate between two qubits. Though, upon taking a look at the Starmon-7 [fact sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf), we read in section VI \"Qubit operations\" that the only native two-qubit gate in Starmon-7 is the CZ gate. What does that mean in practice?\n",
+    "By taking a look at the transpiled circuit of the previous example, we see that it uses a CNOT gate between two qubits. Though, looking at the Starmon-7 [fact sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf), we read in section VI \"Qubit operations\" that the only native two-qubit gate in Starmon-7 is the CZ gate. What does that mean in practice?\n",
     "\n",
     "Whenever we send a quantum circuit to Starmon-7 which includes a CNOT, the CNOT is further decomposed by the Starmon-7 internal software into a combination of single-qubit gates and a CZ gate, a transpilation step which is not visible to the user.\n",
     "\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
    "source": [
     "The raw_data list has a total \"nr_shots\" entries, since we run this circuit for that particular number of shots, and each entry has \"nr_points\" bits, with each containing the result of each measurement block for the particular circuit run.\n",
     "\n",
-    "The right-most bit of each bit string corresponds to the first measuremen block of the quantum circuit, while the left-most bit of each bit string corresponds to the final measurement.\n",
+    "The right-most bit of each bit string corresponds to the first measurement block of the quantum circuit, while the left-most bit of each bit string corresponds to the final measurement.\n",
     "\n",
     "For example, the entry \"raw_data[0][-1]\" gives us the result of the first measurement block of the very first circuit shot. You will notice that statistically, in most of the entries of \"raw_data\", the right-most bit is equal to '1', since this is the measurement that follows right after applying the X gate on the qubit. The qubit thus has a negligible time to relax to the $|0 \\rangle$ state until the first measurement block, and we mostly measure it in the state $|1\\rangle$."
    ]
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
