--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Getting started with Starmon-7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Authors:** Marios Samiotis (m.samiotis@tudelft.nl)\n",
     "\n",
     "**Date:** February 14, 2025"
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +495,6 @@
     "\n",
     "qc = QuantumCircuit(2, 2)\n",
     "\n",
-    "qc.h(qubit_0)\n",
     "qc.cx(qubit_0, qubit_1)\n",
     "qc.measure(qubit_0, cbit=0)\n",
     "qc.measure(qubit_1, cbit=1)"
@@ -512,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
