--- a/T1_measurement_example.ipynb
+++ b/T1_measurement_example.ipynb
@@ -32,7 +32,8 @@
     "\n",
     "Useful links:\n",
     "1. [Starmon-7 Fact Sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf)\n",
-    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)"
+    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)\n",
+    "3. [Starmon-7 Fridge Parameters [live updated]](https://dicarlolab.tudelft.nl/Starmon7_fridge.html)"
    ]
   },
   {
