--- a/getting_started_starmon7.ipynb
+++ b/getting_started_starmon7.ipynb
@@ -37,7 +37,8 @@
     "\n",
     "Useful links:\n",
     "1. [Starmon-7 Fact Sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf)\n",
-    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)"
+    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)\n",
+    "3. [Starmon-7 Fridge Parameters [live updated]](https://dicarlolab.tudelft.nl/Starmon7_fridge.html)"
    ]
   },
   {
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +781,7 @@
     "ax.scatter(1e6*measurement_times, prob_state_1, label='Data')\n",
     "ax.plot(1e6*measurement_times, exponential_fit, label='exp() fit', color='r')\n",
     "ax.set_xlabel('Time [μs]')\n",
-    "ax.set_ylabel(r'$P(|1 \\rangle)$')\n",
+    "ax.set_ylabel(r'$P(m=1)$')\n",
     "ax.set_title(f'T1 measurement\\nQubit \"{qubit_nr}\"')\n",
     "\n",
     "ax.text(x = 0.0, y = 0.0, s = f'T1 = {- 1e6 * 1 / b_fit:.2f} μs',\n",
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +901,7 @@
     "ax.scatter(np.arange(0, total_steps, 1), prob_state_1, label='Data')\n",
     "ax.plot(np.arange(0, total_steps, 1), cosine_fit, label='cos() fit', color='r')\n",
     "ax.set_xlabel('Applied pulse')\n",
-    "ax.set_ylabel(r'$P(|1 \\rangle)$')\n",
+    "ax.set_ylabel(r'$P(m=1)$')\n",
     "ax.set_title(f'Rabi oscillation\\nQubit \"{qubit_nr}\"')\n",
     "\n",
     "labels = []\n",
@@ -927,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +992,7 @@
     "ax.scatter(np.arange(0, total_steps, 1), prob_state_1, label='Data')\n",
     "ax.plot(np.arange(0, total_steps, 1), cosine_fit, label='cos() fit', color='r')\n",
     "ax.set_xlabel('Applied pulse')\n",
-    "ax.set_ylabel(r'$P(|1 \\rangle)$')\n",
+    "ax.set_ylabel(r'$P(m=1)$')\n",
     "ax.set_title(f'Rabi oscillation\\nQubit \"{qubit_nr}\"')\n",
     "\n",
     "labels = []\n",
