--- a/getting_started_starmon7.ipynb
+++ b/getting_started_starmon7.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,6 +496,7 @@
     "\n",
     "qc = QuantumCircuit(2, 2)\n",
     "\n",
+    "qc.h(qubit_0)\n",
     "qc.cx(qubit_0, qubit_1)\n",
     "qc.measure(qubit_0, cbit=0)\n",
     "qc.measure(qubit_1, cbit=1)"
@@ -519,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
