--- a/getting_started_tuna5.ipynb
+++ b/getting_started_tuna5.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! qi login \"https://staging.qi2.quantum-inspire.com\""
+    "!qi login \"https://api.quantum-inspire.com\""
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend_name = \"HQ/2 cycle-1\"\n",
+    "backend_name = \"Tuna-5\"\n",
     "backend = provider.get_backend(name=backend_name)"
    ]
   },
