[IN PROGRESS] Checkpoint commit

--- a/qi_utilities/notebook_guides/getting_started_tuna5.ipynb
+++ b/qi_utilities/notebook_guides/getting_started_tuna5.ipynb
@@ -46,16 +46,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please continue logging in by opening: https://auth.quantum-inspire.com/activate?user_code=DZFT-RSHB in your browser\n",
+      "If promped to verify a code, please confirm it is as follows: DZFT-RSHB\n",
+      "Login successful!\n",
+      "Using member ID 10\n"
+     ]
+    }
+   ],
    "source": [
     "! qi login \"https://api.quantum-inspire.com\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<qiskit_quantuminspire.qi_backend.QIBackend object at 0x14773e180 (name=QX emulator, id=1)>,\n",
+       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1459837d0 (name=Starmon-7, id=3)>,\n",
+       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1474bef90 (name=Tuna-5, id=4)>,\n",
+       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1474bff20 (name=Ry emulator, id=5)>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "provider.backends()"
    ]
@@ -115,12 +140,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend_name = \"Tuna-5\"\n",
+    "backend_name = \"Starmon-7\"\n",
     "backend = provider.get_backend(name=backend_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backend.status.name == 'OFFLINE'"
    ]
   },
   {
