--- a/qi_utilities/notebook_guides/getting_started_tuna5.ipynb
+++ b/qi_utilities/notebook_guides/getting_started_tuna5.ipynb
@@ -46,27 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please continue logging in by opening: https://auth.quantum-inspire.com/activate?user_code=DZFT-RSHB in your browser\n",
-      "If promped to verify a code, please confirm it is as follows: DZFT-RSHB\n",
-      "Login successful!\n",
-      "Using member ID 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! qi login \"https://api.quantum-inspire.com\""
+    "! qi login \"https://staging.qi2.quantum-inspire.com\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,23 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<qiskit_quantuminspire.qi_backend.QIBackend object at 0x14773e180 (name=QX emulator, id=1)>,\n",
-       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1459837d0 (name=Starmon-7, id=3)>,\n",
-       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1474bef90 (name=Tuna-5, id=4)>,\n",
-       " <qiskit_quantuminspire.qi_backend.QIBackend object at 0x1474bff20 (name=Ry emulator, id=5)>]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "provider.backends()"
    ]
@@ -140,30 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend_name = \"Starmon-7\"\n",
+    "backend_name = \"Tuna-9\"\n",
     "backend = provider.get_backend(name=backend_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "backend.status.name == 'OFFLINE'"
    ]
@@ -645,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qubit_nr = 0 # e.g. the entry \"0\" is for qubit \"Q0\"\n",
+    "qubit_nr = 2 # e.g. the entry \"0\" is for qubit \"Q0\"\n",
     "total_time = 200e-6 # total measurement time in units of [s]\n",
     "nr_points = 31 # number of measurement points"
    ]
@@ -800,7 +764,7 @@
    "source": [
     "prob_state_1 = []\n",
     "for entry in range(len(raw_data_prob)):\n",
-    "    prob_state_1.append(raw_data_prob[entry]['prob(1)'])\n",
+    "    prob_state_1.append(raw_data_prob[entry]['1'])\n",
     "\n",
     "def exponential_func(x, a, b):\n",
     "    return a * np.exp(b*x)\n",
