Branch is ready for merging

--- a/qi_utilities/notebook_guides/S.0_T1_measurement_example.ipynb
+++ b/qi_utilities/notebook_guides/S.0_T1_measurement_example.ipynb
@@ -20,6 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "NOTE: this notebook contains legacy code which was used with Quantum Inspire (QI) 1.0, and has now been translated to QI 2.0. Apart from the translation to QI 2.0, this code and format are not being currently supported."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this notebook we will perform a $T_1$ measurement using custom functions from utility_functions.py, and save the raw data in a .csv file in order to be processed after measurement.\n",
     "\n",
     "We use the mid-circuit measurement functionality for this purpose.\n",
