Final clean-up after releasing Tuna-9 in production

--- a/qi_utilities/notebook_guides/0.0_getting_started_starmon7.ipynb
+++ b/qi_utilities/notebook_guides/0.0_getting_started_starmon7.ipynb
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice the bit-ordering convention being used here. The measurement outcome of qubit qubit_0 (qubit_1) is stored in the least-significant (most-significant) bit cbit_0 (cbit_1) of the classical register.\n",
+    "Notice the bit-ordering convention being used here. For a classical bit register of size N, and a classical bit cbit_i where i is the bit index, the measurement results are always stored as [\"cbit_N-1 cbit_N-2 ... cbit_1 cbit_0\"].\n",
     "\n",
     "Now we run the above circuit on the Starmon-7 backend. We choose for the number of circuit shots the maximum allowed, which as we have already seen in Section 2 is given by \"backend.max_shots\".\n",
     "\n",
