--- a/qi_utilities/notebook_guides/S.0_T1_measurement_example.ipynb
+++ b/qi_utilities/notebook_guides/S.0_T1_measurement_example.ipynb
@@ -38,9 +38,9 @@
     "NOTE: in order to run the custom functions from utility_functions.py, you will need to clone the entire repository QuantumInspireUtilities from [https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/tree/main](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/tree/main).\n",
     "\n",
     "Useful links:\n",
-    "1. [Starmon-7 Fact Sheet](https://github.com/DiCarloLab-Delft/QuantumInspireUtilities/blob/main/Starmon7_FactSheet.pdf)\n",
-    "2. [Starmon-7 Performance Metrics [live updated]](https://dicarlolab.tudelft.nl/Starmon7_performance.html)\n",
-    "3. [Starmon-7 Fridge Parameters [live updated]](https://dicarlolab.tudelft.nl/Starmon7_fridge.html)"
+    "1. [Tuna Backends Operational Specifics](https://www.quantum-inspire.com/kbase/tuna-operational-specifics/)\n",
+    "2. [Backend Performance Dashboards](https://monitoring.qutech.support/public-dashboards/c494a21fb6b7405f850ab8f340f798ef?orgId=1&refresh=10s) [live updates]\n",
+    "3. [Join our Slack community!](https://join.slack.com/t/qisuperconducting/shared_invite/zt-35o7zitdh-_9QPmB53hhLy12Eat5gwWA)"
    ]
   },
   {
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_backend = \"Starmon-7\"\n",
+    "experiment_backend = \"Tuna-9\"\n",
     "provider = QIProvider()\n",
     "backend = provider.get_backend(name=experiment_backend)"
    ]
@@ -94,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nr_qubits = 7 # Number of qubits of Starmon-7 processor\n",
+    "nr_qubits = 9 # Number of qubits of Tuna-9 processor\n",
     "nr_points = 15 # Number of points for the T1 experiment\n",
     "total_time = 150e-6 # Total time of the T1 experiment in [s]\n",
     "\n",
@@ -108,7 +108,7 @@
     "dt = total_time / nr_points # time interval between each measurement point\n",
     "measurement_times = np.linspace(start = 0.0, stop = total_time, num = nr_points)\n",
     "\n",
-    "qc = QuantumCircuit(7, nr_points) # NOTE: we should put backend.num_qubits here\n",
+    "qc = QuantumCircuit(9, nr_points) # NOTE: we should put backend.num_qubits here\n",
     "qc.x(qubit_index) # qubit initialization to the |1> state\n",
     "qc.measure(qubit = qubit_index, cbit = 0) # initial measurement at time t=0\n",
     "for time_idx in range(1, nr_points):\n",
