--- a/qi_utilities/notebook_guides/1.0_trotterization_intro.ipynb
+++ b/qi_utilities/notebook_guides/1.0_trotterization_intro.ipynb
@@ -745,12 +745,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "68f04cda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qc = QuantumCircuit(nr_qubits, nr_qubits*len(evolution_times), name=f\"trotterization_heisenberg_{measured_observable}\")\n",
+    "qc = QuantumCircuit(nr_qubits, nr_qubits*len(evolution_times),\n",
+    "                    name=f\"Trotterization_{measured_observable}_Timestep_{time_step}\")\n",
     "\n",
     "for time_step in range(len(evolution_times)):\n",
     "    qc_step = construct_trotterization_circuit(initial_state,\n",
@@ -852,30 +853,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "45505681",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully stored project record in the following directory:\n",
-      "/Users/mariossamiotis/Documents/QuantumInspireProjects/20260119/162917_trotterization_heisenberg_ZZ\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<qi_utilities.utility_functions.data_handling.StoreProjectRecord at 0x133351730>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nr_shots = 2**11 # NOTE: adjust accordingly in case the memory limitation of the\n",
     "                 # readout instruments is exceeded\n",
