Checkpoint: about to test VQE class

--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -408,11 +408,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "f59b5adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "581e9497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timestamp = datetime.now()\n",
+    "date_timestamp = timestamp.strftime(\"%Y%m%d\")\n",
+    "project_timestamp = timestamp.strftime(\"%H%M%S\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9f5829cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16384"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "backend.max_shots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ea06402b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
     "from qiskit_algorithms.optimizers import SPSA\n",
     "\n",
     "class VQE:\n",
@@ -423,22 +469,78 @@
     "                 backend,\n",
     "                 qubit_list,\n",
     "                 basis_gates,\n",
-    "                 ro_assignment_matrix,\n",
-    "                 nr_shots = 2**11):\n",
+    "                 nr_shots = 2**11,\n",
+    "                 maxiter = 200,\n",
+    "                 project_name = None):\n",
     "        \n",
     "        self.termination_status = False\n",
     "        self.qc_parameterized = qc_parameterized\n",
     "        self.hamiltonian = hamiltonian\n",
     "        self.backend = backend\n",
+    "        self.nr_qubits = len(qubit_list)\n",
     "        self.qubit_list = qubit_list\n",
     "        self.basis_gates = basis_gates\n",
-    "        self.ro_assignment_matrix = ro_assignment_matrix\n",
     "        self.nr_shots = nr_shots\n",
+    "        self.maxiter = maxiter\n",
+    "        self.project_name = project_name\n",
+    "\n",
+    "        if self.project_name == None:\n",
+    "            self.project_name = f'VQE_{self.nr_qubits}_Qubits'\n",
     "\n",
     "        self.job_directories = []\n",
     "        self.var_parameter_list = []\n",
     "        self.output_energies_list = []\n",
     "\n",
+    "        self.create_project_directory()\n",
+    "\n",
+    "\n",
+    "    def create_project_directory(self):\n",
+    "\n",
+    "        timestamp = datetime.now()\n",
+    "        self.date_timestamp = timestamp.strftime(\"%Y%m%d\")\n",
+    "        self.project_timestamp = timestamp.strftime(\"%H%M%S\")\n",
+    "\n",
+    "        self.project_dir = (\n",
+    "            Path.home() / \"Documents\" / \"QuantumInspireProjects\" / self.date_timestamp\n",
+    "            / f\"{self.project_timestamp}_{self.project_name}\"\n",
+    "        )\n",
+    "        self.project_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    def store_project_json(self):\n",
+    "        \"\"\"\n",
+    "        This instance method stores job (project) related metadata within\n",
+    "        the project directory in a JSON format.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        general_dict = {}\n",
+    "        general_dict['Backend info'] = {}\n",
+    "        general_dict['Experiment metadata'] = {}\n",
+    "        general_dict['Experiment data'] = {}\n",
+    "\n",
+    "        general_dict['Project name'] = self.project_name\n",
+    "        general_dict['Project timestamp'] = f\"{self.date_timestamp}_{self.project_timestamp}\"\n",
+    "\n",
+    "        general_dict['Backend info']['Backend name'] = self.backend.name\n",
+    "        general_dict['Backend info']['Backend number of qubits'] = self.backend.num_qubits\n",
+    "        general_dict['Backend info']['Backend operations set'] = self.backend.instructions\n",
+    "        general_dict['Backend info']['Backend maximum allowed shots'] = self.backend.max_shots\n",
+    "\n",
+    "        general_dict['Experiment metadata']['Hamiltonian operator'] = self.hamiltonian\n",
+    "        general_dict['Experiment metadata']['Qubits used'] = self.qubit_list\n",
+    "        general_dict['Experiment metadata']['Number of shots'] = self.nr_shots\n",
+    "        general_dict['Experiment metadata']['Readout assignment matrix'] = self.ro_assignment_matrix\n",
+    "        general_dict['Experiment metadata']['Optimizer maxiter'] = self.maxiter\n",
+    "        general_dict['Experiment metadata']['Jobs directories'] = self.job_directories\n",
+    "\n",
+    "        general_dict['Experiment data']['var_parameters'] = self.var_parameter_list\n",
+    "        general_dict['Experiment data']['output_energies'] = self.output_energies_list\n",
+    "\n",
+    "        file_path = (\n",
+    "            Path(self.project_dir)\n",
+    "            / f\"project_data_{self.date_timestamp}_{self.project_timestamp}.json\"\n",
+    "        )\n",
+    "        with open(file_path, 'w') as file:\n",
+    "            json.dump(general_dict, file, indent=3)\n",
     "\n",
     "    def make_ansatz(self,\n",
     "                    var_parameters):\n",
@@ -491,28 +593,39 @@
     "        self.var_parameter_list.append(var_parameters)\n",
     "        self.output_energies_list.append(output_energy)\n",
     "\n",
+    "        self.store_project_json()\n",
     "        return output_energy\n",
     "    \n",
     "\n",
     "    def run(self):\n",
-    "        \n",
+    "\n",
+    "        initial_point = np.random.uniform(\n",
+    "            low=-np.pi,\n",
+    "            high=np.pi,\n",
+    "            size=self.qc_parameterized.num_parameters\n",
+    "        )\n",
+    "        self.ro_assignment_matrix = measure_ro_assignment_matrix(backend, qubit_list)\n",
+    "\n",
     "        SPSA_optimizer = SPSA(\n",
-    "            maxiter=200,\n",
+    "            maxiter=self.maxiter,\n",
     "            perturbation=0.1 * np.pi,\n",
     "            learning_rate=0.05 * np.pi\n",
     "            )\n",
-    "        wrapped_func = SPSA_optimizer.wrap_function(run_vqe,\n",
-    "                                    args=(qc_parameterized,\n",
-    "                                        hamiltonian_operator,\n",
-    "                                        backend,\n",
-    "                                        qubit_list,\n",
-    "                                        superconducting_basis_gates,\n",
-    "                                        ro_assignment_matrix))\n",
     "\n",
-    "        result = SPSA_optimizer.minimize(wrapped_func,\n",
+    "        self.result = SPSA_optimizer.minimize(self.cost_function,\n",
     "                                        x0 = initial_point,\n",
-    "                                        bounds=[(-np.pi, np.pi)] * qc_parameterized.num_parameters)"
+    "                                        bounds=[(-np.pi, np.pi)] * qc_parameterized.num_parameters)\n",
+    "        \n",
+    "        self.termination_status = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55690919",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
