--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ea06402b",
    "metadata": {},
    "outputs": [],
@@ -492,6 +492,7 @@
     "        self.output_energies_list = []\n",
     "\n",
     "        self.create_project_directory()\n",
+    "        self.run()\n",
     "\n",
     "\n",
     "    def create_project_directory(self):\n",
@@ -513,22 +514,23 @@
     "        \"\"\"\n",
     "        \n",
     "        general_dict = {}\n",
+    "        general_dict['Project name'] = self.project_name\n",
+    "        general_dict['Project timestamp'] = f\"{self.date_timestamp}_{self.project_timestamp}\"\n",
+    "\n",
     "        general_dict['Backend info'] = {}\n",
     "        general_dict['Experiment metadata'] = {}\n",
     "        general_dict['Experiment data'] = {}\n",
     "\n",
-    "        general_dict['Project name'] = self.project_name\n",
-    "        general_dict['Project timestamp'] = f\"{self.date_timestamp}_{self.project_timestamp}\"\n",
-    "\n",
     "        general_dict['Backend info']['Backend name'] = self.backend.name\n",
     "        general_dict['Backend info']['Backend number of qubits'] = self.backend.num_qubits\n",
-    "        general_dict['Backend info']['Backend operations set'] = self.backend.instructions\n",
     "        general_dict['Backend info']['Backend maximum allowed shots'] = self.backend.max_shots\n",
     "\n",
-    "        general_dict['Experiment metadata']['Hamiltonian operator'] = self.hamiltonian\n",
+    "        general_dict['Experiment metadata']['Hamiltonian operator'] = {}\n",
+    "        general_dict['Experiment metadata']['Hamiltonian operator']['Paulis'] = self.hamiltonian.paulis.to_labels()\n",
+    "        general_dict['Experiment metadata']['Hamiltonian operator']['Coefficients (real)'] = np.real(self.hamiltonian.coeffs).tolist()\n",
     "        general_dict['Experiment metadata']['Qubits used'] = self.qubit_list\n",
     "        general_dict['Experiment metadata']['Number of shots'] = self.nr_shots\n",
-    "        general_dict['Experiment metadata']['Readout assignment matrix'] = self.ro_assignment_matrix\n",
+    "        general_dict['Experiment metadata']['Readout assignment matrix'] = self.ro_assignment_matrix.tolist()\n",
     "        general_dict['Experiment metadata']['Optimizer maxiter'] = self.maxiter\n",
     "        general_dict['Experiment metadata']['Jobs directories'] = self.job_directories\n",
     "\n",
@@ -590,7 +592,7 @@
     "        output_energy = self.calculate_energy(result)\n",
     "\n",
     "        self.job_directories.append(f\"{job_record.job_dir.parts[-3]}_{job_record.job_dir.parts[-2]}_{job_record.job_dir.parts[-1]}\")\n",
-    "        self.var_parameter_list.append(var_parameters)\n",
+    "        self.var_parameter_list.append(var_parameters.tolist())\n",
     "        self.output_energies_list.append(output_energy)\n",
     "\n",
     "        self.store_project_json()\n",
@@ -621,11 +623,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "55690919",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nr_qubits = 2\n",
+    "J = 1 # in arbitrary units\n",
+    "\n",
+    "pauli_terms = ['XX', 'YY', 'ZZ']\n",
+    "pauli_coefficients = [J, J, J]\n",
+    "hamiltonian_operator = qi.SparsePauliOp(pauli_terms, pauli_coefficients)\n",
+    "\n",
+    "superconducting_basis_gates = ['id', 'z', 's', 'sdg', 't', 'tdg', 'x', 'rx', 'y', 'ry', 'cz', 'delay', 'reset']\n",
+    "qubit_list = [0, 2]\n",
+    "\n",
+    "qc_parameterized = construct_hva_circuit(initial_state = '01',\n",
+    "                                         hamiltonian = hamiltonian_operator,\n",
+    "                                         repetitions = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8eb5bad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[64]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mVQE\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqc_parameterized\u001b[49m\u001b[43m=\u001b[49m\u001b[43mqc_parameterized\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m    \u001b[49m\u001b[43mhamiltonian\u001b[49m\u001b[43m=\u001b[49m\u001b[43mhamiltonian_operator\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbackend\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbackend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43mqubit_list\u001b[49m\u001b[43m=\u001b[49m\u001b[43mqubit_list\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43mbasis_gates\u001b[49m\u001b[43m=\u001b[49m\u001b[43msuperconducting_basis_gates\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[62]\u001b[39m\u001b[32m, line 37\u001b[39m, in \u001b[36mVQE.__init__\u001b[39m\u001b[34m(self, qc_parameterized, hamiltonian, backend, qubit_list, basis_gates, nr_shots, maxiter, project_name)\u001b[39m\n\u001b[32m     34\u001b[39m \u001b[38;5;28mself\u001b[39m.output_energies_list = []\n\u001b[32m     36\u001b[39m \u001b[38;5;28mself\u001b[39m.create_project_directory()\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[62]\u001b[39m\u001b[32m, line 159\u001b[39m, in \u001b[36mVQE.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    151\u001b[39m \u001b[38;5;28mself\u001b[39m.ro_assignment_matrix = measure_ro_assignment_matrix(backend, qubit_list)\n\u001b[32m    153\u001b[39m SPSA_optimizer = SPSA(\n\u001b[32m    154\u001b[39m     maxiter=\u001b[38;5;28mself\u001b[39m.maxiter,\n\u001b[32m    155\u001b[39m     perturbation=\u001b[32m0.1\u001b[39m * np.pi,\n\u001b[32m    156\u001b[39m     learning_rate=\u001b[32m0.05\u001b[39m * np.pi\n\u001b[32m    157\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m159\u001b[39m \u001b[38;5;28mself\u001b[39m.result = \u001b[43mSPSA_optimizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mminimize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcost_function\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    160\u001b[39m \u001b[43m                                \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_point\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    161\u001b[39m \u001b[43m                                \u001b[49m\u001b[43mbounds\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43m-\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mqc_parameterized\u001b[49m\u001b[43m.\u001b[49m\u001b[43mnum_parameters\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    163\u001b[39m \u001b[38;5;28mself\u001b[39m.termination_status = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_algorithms/optimizers/spsa.py:562\u001b[39m, in \u001b[36mSPSA.minimize\u001b[39m\u001b[34m(self, fun, x0, jac, bounds)\u001b[39m\n\u001b[32m    560\u001b[39m iteration_start = time()\n\u001b[32m    561\u001b[39m \u001b[38;5;66;03m# compute update\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m562\u001b[39m fx_estimate, update = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_compute_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfun\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43meps\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlse_solver\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    564\u001b[39m \u001b[38;5;66;03m# trust region\u001b[39;00m\n\u001b[32m    565\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.trust_region:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_algorithms/optimizers/spsa.py:493\u001b[39m, in \u001b[36mSPSA._compute_update\u001b[39m\u001b[34m(self, loss, x, k, eps, lse_solver)\u001b[39m\n\u001b[32m    490\u001b[39m     num_samples = \u001b[38;5;28mself\u001b[39m.resamplings\n\u001b[32m    492\u001b[39m \u001b[38;5;66;03m# accumulate the number of samples\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m493\u001b[39m value, gradient, hessian = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_point_estimate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_samples\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    495\u001b[39m \u001b[38;5;66;03m# precondition gradient with inverse Hessian, if specified\u001b[39;00m\n\u001b[32m    496\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.second_order:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_algorithms/optimizers/spsa.py:469\u001b[39m, in \u001b[36mSPSA._point_estimate\u001b[39m\u001b[34m(self, loss, x, eps, num_samples)\u001b[39m\n\u001b[32m    466\u001b[39m delta1 = deltas1[i]\n\u001b[32m    467\u001b[39m delta2 = deltas2[i] \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.second_order \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m469\u001b[39m value_sample, gradient_sample, hessian_sample = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_point_sample\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    470\u001b[39m \u001b[43m    \u001b[49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta2\u001b[49m\n\u001b[32m    471\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    472\u001b[39m value_estimate += value_sample\n\u001b[32m    473\u001b[39m gradient_estimate += gradient_sample\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_algorithms/optimizers/spsa.py:430\u001b[39m, in \u001b[36mSPSA._point_sample\u001b[39m\u001b[34m(self, loss, x, eps, delta1, delta2)\u001b[39m\n\u001b[32m    427\u001b[39m     \u001b[38;5;28mself\u001b[39m._nfev += \u001b[32m2\u001b[39m\n\u001b[32m    429\u001b[39m \u001b[38;5;66;03m# batch evaluate the points (if possible)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m430\u001b[39m values = \u001b[43m_batch_evaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpoints\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_max_evals_grouped\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    432\u001b[39m plus = values[\u001b[32m0\u001b[39m]\n\u001b[32m    433\u001b[39m minus = values[\u001b[32m1\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_algorithms/optimizers/spsa.py:698\u001b[39m, in \u001b[36m_batch_evaluate\u001b[39m\u001b[34m(function, points, max_evals_grouped, unpack_points)\u001b[39m\n\u001b[32m    694\u001b[39m \u001b[38;5;66;03m# if the function cannot handle lists of points as input, cover this case immediately\u001b[39;00m\n\u001b[32m    695\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m max_evals_grouped \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m max_evals_grouped == \u001b[32m1\u001b[39m:\n\u001b[32m    696\u001b[39m     \u001b[38;5;66;03m# support functions with multiple arguments where the points are given in a tuple\u001b[39;00m\n\u001b[32m    697\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m [\n\u001b[32m--> \u001b[39m\u001b[32m698\u001b[39m         function(*point) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(point, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpoint\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m point \u001b[38;5;129;01min\u001b[39;00m points\n\u001b[32m    699\u001b[39m     ]\n\u001b[32m    701\u001b[39m num_points = \u001b[38;5;28mlen\u001b[39m(points)\n\u001b[32m    703\u001b[39m \u001b[38;5;66;03m# get the number of batches\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[62]\u001b[39m\u001b[32m, line 132\u001b[39m, in \u001b[36mVQE.cost_function\u001b[39m\u001b[34m(self, var_parameters)\u001b[39m\n\u001b[32m    126\u001b[39m qc_instance_transpiled = transpile(qc_instance,\n\u001b[32m    127\u001b[39m                         \u001b[38;5;28mself\u001b[39m.backend,\n\u001b[32m    128\u001b[39m                         initial_layout=\u001b[38;5;28mself\u001b[39m.qubit_list,\n\u001b[32m    129\u001b[39m                         basis_gates=\u001b[38;5;28mself\u001b[39m.basis_gates)\n\u001b[32m    131\u001b[39m job = backend.run(qc_instance_transpiled, shots=\u001b[38;5;28mself\u001b[39m.nr_shots, memory=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m--> \u001b[39m\u001b[32m132\u001b[39m result = \u001b[43mjob\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m600\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    133\u001b[39m job_record = StoreProjectRecord(job, silent=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    134\u001b[39m output_energy = \u001b[38;5;28mself\u001b[39m.calculate_energy(result)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit_quantuminspire/qi_jobs.py:454\u001b[39m, in \u001b[36mQIJob.result\u001b[39m\u001b[34m(self, wait_for_results, timeout)\u001b[39m\n\u001b[32m    452\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Return the results of the job.\"\"\"\u001b[39;00m\n\u001b[32m    453\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m wait_for_results:\n\u001b[32m--> \u001b[39m\u001b[32m454\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mwait_for_final_state\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    455\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.done():\n\u001b[32m    456\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m(Batch)Job status is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.status()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/quantuminspire/lib/python3.12/site-packages/qiskit/providers/job.py:126\u001b[39m, in \u001b[36mJobV1.wait_for_final_state\u001b[39m\u001b[34m(self, timeout, wait, callback)\u001b[39m\n\u001b[32m    124\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m callback:\n\u001b[32m    125\u001b[39m         callback(\u001b[38;5;28mself\u001b[39m.job_id(), status, \u001b[38;5;28mself\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m126\u001b[39m     \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    127\u001b[39m     status = \u001b[38;5;28mself\u001b[39m.status()\n\u001b[32m    128\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "VQE(qc_parameterized=qc_parameterized,\n",
+    "    hamiltonian=hamiltonian_operator,\n",
+    "    backend=backend,\n",
+    "    qubit_list=qubit_list,\n",
+    "    basis_gates=superconducting_basis_gates)"
+   ]
   }
  ],
  "metadata": {
