--- a/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
+++ b/qi_utilities/notebook_guides/S.1_VQE_scratchpad.ipynb
@@ -88,11 +88,7 @@
     "hamiltonian_operator = qi.SparsePauliOp(pauli_terms, pauli_coefficients)\n",
     "\n",
     "superconducting_basis_gates = ['id', 'z', 's', 'sdg', 't', 'tdg', 'x', 'rx', 'y', 'ry', 'cz', 'delay', 'reset']\n",
-    "qubit_list = [0, 2]\n",
-    "\n",
-    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
-    "                                         hamiltonian = hamiltonian_operator,\n",
-    "                                         repetitions = 1)"
+    "qubit_list = [0, 2]"
    ]
   },
   {
@@ -102,13 +98,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
+    "                                         hamiltonian = hamiltonian_operator,\n",
+    "                                         repetitions = 1)\n",
+    "\n",
     "ExecuteVQE(variational_qc=variational_qc,\n",
     "           hamiltonian=hamiltonian_operator,\n",
     "           hamiltonian_units='a.u.',\n",
     "           backend=backend,\n",
     "           qubit_list=qubit_list,\n",
-    "           basis_gates=superconducting_basis_gates,\n",
-    "           maxiter = 4)"
+    "           basis_gates=superconducting_basis_gates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58079ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
+    "                                         hamiltonian = hamiltonian_operator,\n",
+    "                                         repetitions = 2)\n",
+    "\n",
+    "ExecuteVQE(variational_qc=variational_qc,\n",
+    "           hamiltonian=hamiltonian_operator,\n",
+    "           hamiltonian_units='a.u.',\n",
+    "           backend=backend,\n",
+    "           qubit_list=qubit_list,\n",
+    "           basis_gates=superconducting_basis_gates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75abf531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variational_qc = construct_hva_circuit(initial_state = '01',\n",
+    "                                         hamiltonian = hamiltonian_operator,\n",
+    "                                         repetitions = 3)\n",
+    "\n",
+    "ExecuteVQE(variational_qc=variational_qc,\n",
+    "           hamiltonian=hamiltonian_operator,\n",
+    "           hamiltonian_units='a.u.',\n",
+    "           backend=backend,\n",
+    "           qubit_list=qubit_list,\n",
+    "           basis_gates=superconducting_basis_gates)"
    ]
   }
  ],
